--- a/pos-backend/src/main/resources/application.properties
+++ b/pos-backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8081
 
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/toaster?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://toaster.cc7s5kmqjtat.ap-south-1.rds.amazonaws.com:3306/toaster?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root@123
+spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.data.jpa.repositories.enabled=true
 spring.jpa.database-platform=rg.hibernate.dialect.MySQL8Dialect
